--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <input type="text" name="name" required>
         <label for="">email</label>
         <input type="email" name="email" required>
-        <input type="_hidden" name="_next" value="https:///Users/scottlloyd.github.io/send_epost_2/takk.html">
+        <input type="_hidden" name="_next" value="https://Users/scottlloyd.github.io/send_epost_2/takk.html">
         <br>
         <input type="text" name="melding" required>
         <button type="submit">send</button>
